<resources>
    <string name="app_name">WildBicycle</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_login">Login</string>
    <string name="running_menu">Running</string>
    <string name="menu_record">Historial</string>
    <string name="menu_became_premium">Hazte Premium</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="clear_preferences">Reestablecer ajustes</string>

    <string name="record">Record</string>
    <string name="level">Nivel</string>
    <string name="nav_hi">quien mueve las piernas mueve el corazon</string>
    <string name="user">blaba@wildrunning.com</string>

    <string name="introducir_email">Introduce tu email</string>
    <string name="introducir_contraseña">Introduce tu contraseña</string>
    <string name="iniciarSesion">INICIAR SESION</string>
    <string name="olvidado_contraseña">CAMBIAR CONTRASEÑA EN CASO DE QUE LA HAYAS OLVIDADO</string>
    <string name="iniciar_sesion_con_google">INICIAR SESION CON GOOGLE</string>
    <string name="registro">REGISTRARSE POR \nPRIMERA VEZ</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="obligatorio">Obligatorio*</string>
    <string name="home">Home</string>

    <string name="wildBicicle">WildBicicle</string>
    <string name="daysBike">4d 03:56:23</string>
    <string name="distance">DISTANCE</string>
    <string name="_30">30%</string>
    <string name="_5_10">5/10</string>
    <string name="runs">RUNS</string>
    <string name="_4d_03_56_23">4d 03:56:23</string>
</resources>